--- a/app/Resources/views/quittance/index.html.twig
+++ b/app/Resources/views/quittance/index.html.twig
@@ -1,7 +1,8 @@
 {% extends '::base.html.twig' %}
 {% block menu -%}
 {% embed  '::centre/menu.html.twig' %}
-{% block menu_quittances_actif %}active{% endblock %}
+{% block menu_quittances_open %}active{% endblock %}
+{% block menu_quittance_actif %}active{% endblock %}
 {% endembed %}
 {% endblock %}
 {% block ariane -%}
