--- a/app/Resources/views/statistique/caisse/etat.html.twig
+++ b/app/Resources/views/statistique/caisse/etat.html.twig
@@ -24,7 +24,7 @@
     </label>
 {% endblock %}
 {% block body -%}
-    <div class="table-responsive">
+    <div class="table-responsive" style="width:200mm">
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
                 <tr>
