--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -82,10 +82,10 @@
                     <a class="nav-link {% block menu_historiquevehicule_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_historique_index') }}">
                         <i class="nav-icon icon-list"></i> Véhicules</a>
                 </li>
-                <li class="nav-item ">
+                {# <li class="nav-item ">
                     <a class="nav-link {% block menu_historiquequittance_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_historique_quittance') }}">
                         <i class="nav-icon icon-list"></i> Quittance</a>
-                </li>
+                </li> #}
             </ul>
     </li>
 {% endif %}
