--- a/app/Resources/views/statistique/caisse/caissier.html.twig
+++ b/app/Resources/views/statistique/caisse/caissier.html.twig
@@ -25,8 +25,8 @@
 {% block body -%}
     {% if resultats is not empty %}
         {% for affectation in resultats %}
-            <div class="table-responsive" id="{{ affectation[0] }}" style="width:200mm">
-                <label class="btn btn-outline-secondary pointer-event"><a  href="#" id="doPrint{{ affectation[0] }}" onclick="imprimer('{{ affectation[0] }}')">IMPRIMER</a></label>
+            <label class="btn btn-outline-secondary pointer-event"><a  href="#" id="doPrint{{ affectation[0] }}" onclick="imprimer('{{ affectation[0] }}')">IMPRIMER</a></label>
+            <div class="table-responsive" id="{{ affectation[0] }}" style="width:100%">
                 <table border="1" style="width:100%; text-align: center" id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
                     <thead>
                         <tr>
@@ -111,8 +111,8 @@
         function imprimer(id){
             var printContents = document.getElementById(id).innerHTML;
             var originalContents = document.body.innerHTML;
-            document.body.style.backgroundColor = "white"
-            document.body.innerHTML = printContents;
+            document.body.style.backgroundColor = "white";
+            document.body.innerHTML = '<html><body style="size: A4;margin:0;width:100%;">'+printContents;+'</body></html>'
             window.print();
             document.body.style.backgroundColor = "rgb(228, 229, 230)"
             document.body.innerHTML = originalContents;
