--- a/app/Resources/views/statistique/caisse/caissier.html.twig
+++ b/app/Resources/views/statistique/caisse/caissier.html.twig
@@ -25,7 +25,7 @@
 {% block body -%}
     {% if resultats is not empty %}
         {% for affectation in resultats %}
-            <label class="btn btn-outline-secondary pointer-event"><a  href="#" id="doPrint{{ affectation[0] }}" onclick="imprimer('{{ affectation[0] }}')">IMPRIMER</a></label>
+            <label class="btn btn-outline-secondary pointer-event"><a  href="#" id="doPrint{{ affectation[0] }}" onclick="imprimer('{{ affectation[0] }}print')">IMPRIMER</a></label>
             <div class="table-responsive" id="{{ affectation[0] }}" style="width:100%">
                 <table border="1" style="width:100%; text-align: center" id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
                     <thead>
@@ -85,6 +85,67 @@
                     </tfoot>
                 </table>
             </div>
+             <div id="{{ affectation[0] }}print" class="hidden">
+            <div style="size: A4;margin:0;width:200mm;margin-top:300px;-webkit-transform: rotate(-90deg);-moz-transform:rotate(-90deg);filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=3);">
+                <table border="1" style="width:100%; text-align: center" id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
+                    <thead>
+                        <tr>
+                            <th style="text-align:left">
+                                <img src="{{ asset('images/logocertificat.PNG', absolute=true) }}" />
+                            </th>
+                             <th  style="text-align:left;vertical-align: middle">
+                                DATE : {{ debut }}
+                            </th>
+                            <th  style="text-align:left;vertical-align: middle">
+                                CAISSE N° : {{ caisse.numero }}
+                            </th>
+                            <th colspan="4" style="text-align:left;vertical-align: middle">
+                                CAISSIER : {{ affectation[5] }}<br/>
+                                AFFECTE LE : {{ affectation[3]|date('d-m-Y H:i:s') }}<br/>
+                               {% if affectation[2] == "En cours"  %}EN COURS{%  else %}TERMINE LE :  {{ affectation[2]|date('d-m-Y H:i:s') }}{% endif %}
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>Catégories</th>
+                            <th>Nbr visites</th>
+                            <th>Nbr revisites</th>
+                            <th>CA visites</th>
+                            <th>CA revisites</th>
+                            <th>ANASER</th>
+                            <th>CA Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for ligne in affectation[1] %}
+                        <tr>
+                            {% for element in ligne %}
+                                <td>
+                                    {% if loop.index == 1 %}
+                                        {{ element }}
+                                    {% else %}
+                                        {{ element|number_format(0, ',', ' ') }}
+                                    {% endif %}
+                                </td>
+                                {% endfor %}
+                            {% endfor %}
+                        </tr>
+                            <tr>
+                                <td>{{ affectation[4][0] }}</td>
+                                <td>{{ affectation[4][1]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][2]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][3]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][4]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][5]|number_format(0, ',', ' ') }}</td>
+                                <td>{{ affectation[4][6]|number_format(0, ',', ' ') }}</td>
+                            </tr>
+
+                    </tbody>
+                    <tfoot>
+                        <tr><th colspan="7" style="text-align:right;border-bottom: none">Signature et cachet du caissier</th></tr>
+                    </tfoot>
+                </table>
+            </div>
+            </div>
         {% endfor %}
     {% else %}
         Il n'y a pas encore d'activités sur cette caisse aujourd'hui.
@@ -112,7 +173,7 @@
             var printContents = document.getElementById(id).innerHTML;
             var originalContents = document.body.innerHTML;
             document.body.style.backgroundColor = "white";
-            document.body.innerHTML = '<html><body style="size: A4;margin:0;width:100%;">'+printContents;+'</body></html>'
+            document.body.innerHTML = printContents;
             window.print();
             document.body.style.backgroundColor = "rgb(228, 229, 230)"
             document.body.innerHTML = originalContents;
