affichage du chassis et type chassis

--- a/app/Resources/views/visite/controles.html.twig
+++ b/app/Resources/views/visite/controles.html.twig
@@ -40,6 +40,7 @@
                         <th>Immatriculation</th>
                         <th>Type Chassis</th>
                         <th>Chassis</th>
+                        <th>Type Chassis</th>
                         <th>Proprietaire</th>
                         <th>TYPE</th>
                         <th>ETAT</th>
@@ -52,6 +53,7 @@
                         <tr>
                             <td>{{ visite.immatriculation }} </td>
                             <td>{{ visite.chassis }} </td>
+                            <td>{{ visite.typeChassis }} </td>
                             <td>{{ visite.nom }} {{ visite.prenom }}</td>
                             <td>
                                 {% if visite.contre_visite == 1 %}
