--- a/app/Resources/views/visite/maha.html.twig
+++ b/app/Resources/views/visite/maha.html.twig
@@ -32,6 +32,10 @@
                     <td>{{ visite.vehicule.chassis }}</td>
                 </tr>
                 <tr>
+                    <th>Type Chassis</th>
+                    <td>{{ visite.vehicule.typeChassis }}</td>
+                </tr>
+                <tr>
                     <th>Propriétaire</th>
                     <td>{{ visite.vehicule.proprietaire.nomComplet }}</td>
                 </tr>
