--- a/app/Resources/views/visite/controles.html.twig
+++ b/app/Resources/views/visite/controles.html.twig
@@ -96,6 +96,7 @@
                 <tfoot>
                     <tr>
                         <th>Immatriculation</th>
+                        <th>Chassis</th>
                         <th>Type Chassis</th>
                         <th>Proprietaire</th>
                         <th>TYPE</th>
