--- a/app/Resources/views/visite/controles.html.twig
+++ b/app/Resources/views/visite/controles.html.twig
@@ -113,3 +113,12 @@
 </div>
 {% endblock %}
 
+{% block javascripts -%}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#immatriculation").focus();
+        } );
+        
+    </script>
+{% endblock %}
+
