--- a/app/Resources/views/visite/delivrance.html.twig
+++ b/app/Resources/views/visite/delivrance.html.twig
@@ -98,6 +98,7 @@
                         <th>Proprietaire</th>
                         <th>TYPE</th>
                         <th>ETAT</th>
+                        <th>DATE DU CONTROLE</th>
                         <th>CAISSE/PISTE</th>
                         <th>Actions</th>
                     </tr>
