--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -5,7 +5,7 @@
     </a>
 </li>
 {% endif %}
-{% if is_granted('ROLE_CAISSIER_PRINCIPAL') %} 
+{% if is_granted('ROLE_CHEF_CENTRE') %} 
     <li class="nav-item">
         <a class="nav-link {% block menu_ouvertures_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_ouverture') }}">
             <i class="nav-icon fa fa-key"></i> Ouverture du centre
@@ -15,7 +15,30 @@
         <a class="nav-link {% block menu_sorties_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_sorties_index') }}">
             <i class="nav-icon fa fa-calculator"></i> Opérations de coffre</a>
     </li>
-    
+    <li class="nav-item">
+        <a class="nav-link {% block menu_affectationcaisse_actif %}{% endblock %}" href="{{ path('admin_gestion_affectation_index') }}">
+        <i class="nav-icon fa fa-bank"></i> Affectation aux caisses</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link {% block menu_affectationpiste_actif %}{% endblock %}" href="{{ path('admin_gestion_affectationpiste_index') }}">
+            <i class="nav-icon fa fa-road"></i> Affectation aux pistes</a>
+    </li>
+    <li class="nav-item nav-dropdown {% block menu_historiques_open %}{% endblock %}">
+        <a class="nav-link nav-dropdown-toggle" href="#">
+            <i class="nav-icon fa fa-bar-chart"></i> Historiques</a>
+            <ul class="nav-dropdown-items">
+                <li class="nav-item ">
+                    <a class="nav-link {% block menu_historiquevehicule_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_historique_index') }}">
+                        <i class="nav-icon icon-list"></i> Véhicules</a>
+                </li>
+                {# <li class="nav-item ">
+                    <a class="nav-link {% block menu_historiquequittance_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_historique_quittance') }}">
+                        <i class="nav-icon icon-list"></i> Quittance</a>
+                </li> #}
+            </ul>
+    </li>
+{% endif %}
+{% if is_granted('ROLE_CAISSIER_PRINCIPAL') %}
     <li class="nav-item nav-dropdown {% block menu_quittances_open %}{% endblock %}">
         <a class="nav-link nav-dropdown-toggle" href="#">
             <i class="nav-icon fa fa-bar-chart"></i> Quittances</a>
@@ -32,16 +55,6 @@
             {% endif %}
         </ul>
     </li>
-    <li class="nav-item">
-        <a class="nav-link {% block menu_affectationcaisse_actif %}{% endblock %}" href="{{ path('admin_gestion_affectation_index') }}">
-        <i class="nav-icon fa fa-bank"></i> Affectation aux caisses</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link {% block menu_affectationpiste_actif %}{% endblock %}" href="{{ path('admin_gestion_affectationpiste_index') }}">
-            <i class="nav-icon fa fa-road"></i> Affectation aux pistes</a>
-    </li>
-{% endif %}
-{% if is_granted('ROLE_CAISSIER_PRINCIPAL') %} 
     <li class="nav-item nav-dropdown {% block menu_statistiques_open %}{% endblock %}">
         <a class="nav-link nav-dropdown-toggle" href="#">
             <i class="nav-icon fa fa-bar-chart"></i> Statistiques</a>
@@ -51,41 +64,25 @@
                     <i class="nav-icon icon-list"></i> Etat par caisse</a>
             </li>
             <li class="nav-item ">
+                <a class="nav-link {% block menu_recherche_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_visite_detail') }}">
+                    <i class="nav-icon icon-list"></i> Recherche</a>
+            </li>
+            <li class="nav-item ">
                 <a class="nav-link {% block menu_detail_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_detail_index') }}">
                     <i class="nav-icon icon-list"></i> Statistiques avancées</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link {% block menu_echec_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_echec_index') }}">
-                    <i class="nav-icon icon-list"></i> Visites échouées</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link {% block menu_reussite_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_reussite_index') }}">
-                    <i class="nav-icon icon-list"></i> Visites réussies</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link {% block menu_rapportcentre_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_centre_index') }}">
-                    <i class="nav-icon icon-list"></i> Rapport centre</a>
+                <a class="nav-link {% block menu_echec_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_visite_index') }}">
+                    <i class="nav-icon icon-list"></i> Visites</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link {% block menu_rapportcontroleur_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_controleur_index') }}">
                     <i class="nav-icon icon-list"></i> Rapport contrôleurs</a>
             </li>
+            <li class="nav-item ">
+                <a class="nav-link {% block menu_gratuite_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_visite_gratuite') }}">
+                    <i class="nav-icon icon-list"></i> Visites gratuites</a>
+            </li>
         </ul>
-    </li>
-{% endif %}
-{% if is_granted('ROLE_CAISSIER_PRINCIPAL') %}
-    <li class="nav-item nav-dropdown {% block menu_historiques_open %}{% endblock %}">
-        <a class="nav-link nav-dropdown-toggle" href="#">
-            <i class="nav-icon fa fa-bar-chart"></i> Historiques</a>
-            <ul class="nav-dropdown-items">
-                <li class="nav-item ">
-                    <a class="nav-link {% block menu_historiquevehicule_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_historique_index') }}">
-                        <i class="nav-icon icon-list"></i> Véhicules</a>
-                </li>
-                {# <li class="nav-item ">
-                    <a class="nav-link {% block menu_historiquequittance_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_historique_quittance') }}">
-                        <i class="nav-icon icon-list"></i> Quittance</a>
-                </li> #}
-            </ul>
     </li>
 {% endif %}
