Le chef de centre peut accéder à controle et délivrance Correction bug visite aiguilleur Correction bug vehicule modification Ajouttotal dans le menu recherche

--- a/app/Resources/views/statistique/detail/visites.html.twig
+++ b/app/Resources/views/statistique/detail/visites.html.twig
@@ -35,16 +35,17 @@
     </label>
 {% endblock %}
 {% block body -%}
-    <div class="table-responsive">
+    <div class="table-responsive" id="printDiv">
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
                 <tr>
                      <th colspan="2" style="text-align:left;vertical-align: middle">
                         DU : {{ debut }} AU : {{ fin }}
                     </th>
-                    <th colspan="5"  style="text-align:left;vertical-align: middle">
+                    <th colspan="3"  style="text-align:left;vertical-align: middle">
                         CENTRE : {{ libelle }}
                     </th>
+                    <th colspan="2">TOTAL : {{ visites|length }}</th>
                 </tr>
                 <tr>
                     <th>Type</th>
@@ -102,43 +103,7 @@
             </tbody>            
         </table>
     </div>
-    <div class="hidden" id="printDiv">
-        <div >
-        <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
-            <thead>
-                <tr>
-                    <th style="text-align:left">
-                        <img src="{{ asset('images/logocertificat.PNG', absolute=true) }}" />
-                    </th>
-                     <th  style="text-align:left;vertical-align: middle">
-                        DU : {{ debut }} AU : {{ fin }}
-                    </th>
-                    <th colspan="3"  style="text-align:left;vertical-align: middle">
-                        CENTRE : {{ libelle }}
-                    </th>
-                </tr>
-                <tr>
-                    <th>Catégories</th>
-                    <th>Immatriculation</th>
-                    <th>Controleur</th>
-                    <th>Date</th>
-                    <th>Statut</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for visite in visites %}
-                    <tr>
-                        <td>{{ visite.vehicule.typeVehicule.libelle }}</td>
-                        <td>{% if visite.immatriculation_v is not null %} {{ visite.immatriculation_v }} {%  else %}{{ visite.vehicule.immatriculation }}{%  endif %}</td>
-                        <td>{{ visite.controlleur }}</td>
-                        <td>{% if visite.date %}{{ visite.date|date('Y-m-d h:m:s') }}{% endif %}</td>
-                        <td>{% if visite.statut == 2 or visite.statut == 4 %}SUCCESS{% else %}ECHEC{% endif %}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>            
-        </table>
-    </div>
-    </div>
+    
 {% endblock %}
 {% block javascripts -%}
     <script type="text/javascript">
